--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
             html {
                 color: grey;
                 background-color: black;
-                font-family: "Lucida Console", Monaco, monospace
+                font-family: "Lucida Console", Monaco, monospace;
+                white-space: pre;
+                overflow-x: hidden;
             }
             input {
                 width: 100%;
                 border: none;
                 color: gray;
                 background: black;
-                font-size: 20px;                
+                font-size: 18px;
+                height: 19px;                
             }
         </style>
     </head>
     <body>
-        <div id='game'></div>
-        <input type='text' id='prompt'>
+        <div id='game'></div><span id="delimiter"></span><input type='text' id='prompt'>
     </body>
 </html>
