Moved yaml parser to have no required installable dependencies for web

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <script src='node_modules/js-yaml/dist/js-yaml.min.js'></script>
+        <script src='mobile/js-yaml.min.js'></script>
         <script src='web.js' type='module'></script>
         <style>
             html {
