--- a/mobile.html
+++ b/mobile.html
@@ -61,7 +61,7 @@
       </v-bottom-navigation>
     </v-app>
   </div>
-  <script src='node_modules/js-yaml/dist/js-yaml.min.js'></script>
+  <script src='mobile/js-yaml.min.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script src="mobile.js" type="module"></script>
