Added mobile manifest to make web app installable

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src='mobile/js-yaml.min.js'></script>
         <script src='web.js' type='module'></script>
+        <link rel="manifest" href="/manifest.json">
         <style>
             html {
                 color: grey;
