--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src='mobile/js-yaml.min.js'></script>
         <script src='web.js' type='module'></script>
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="/night_terror/manifest.json">
         <style>
             html {
                 color: grey;
