--- a/mobile.html
+++ b/mobile.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app">
     <v-app>
-      <profile></profile>
+      <profile @menu="menu = !menu"></profile>
 
       <v-content style="margin-bottom: 56px" dark>
         <v-container v-show="view=='look'">        
@@ -85,7 +85,53 @@
           </v-btn>
         </v-card-actions>
       </v-card>
-    </v-dialog>       
+    </v-dialog>   
+    <v-navigation-drawer
+    v-model="menu"
+    fixed
+    temporary
+  >
+    <v-list-item>
+      <v-list-item-avatar>
+        <v-img src="mobile/images/icons/night_terror_192.png"></v-img>
+      </v-list-item-avatar>
+
+      <v-list-item-content>
+        <v-list-item-title>Night Terror</v-list-item-title>
+      </v-list-item-content>
+    </v-list-item>
+
+    <v-divider></v-divider>
+
+    <v-list dense>
+      <v-list-item link @click="save">
+        <v-list-item-icon>
+          <v-icon>mdi-content-save</v-icon>
+        </v-list-item-icon>
+        <v-list-item-content>
+          <v-list-item-title>Save Game</v-list-item-title>
+        </v-list-item-content>
+      </v-list-item>
+
+      <v-list-item link @click="load">
+        <v-list-item-icon>
+          <v-icon>mdi-file-restore</v-icon>
+        </v-list-item-icon>
+        <v-list-item-content>
+          <v-list-item-title>Load Game</v-list-item-title>
+        </v-list-item-content>
+      </v-list-item>
+
+      <v-list-item link @click="restart">
+        <v-list-item-icon>
+          <v-icon>mdi-reload</v-icon>
+        </v-list-item-icon>
+        <v-list-item-content>
+          <v-list-item-title>Restart Game</v-list-item-title>
+        </v-list-item-content>
+      </v-list-item>
+    </v-list>
+  </v-navigation-drawer>        
     </v-app>
   </div>
   <script src='mobile/js-yaml.min.js'></script>
